tests/ui/type-alias-impl-trait/recursive-tait-conflicting-defn.stderr
error: concrete type differs from previous defining opaque type use
  --> $DIR/recursive-tait-conflicting-defn.rs:25:22
   |
LL | fn make_option2() -> Option<TestImpl> {
   |                      ^^^^^^^^^^^^^^^^ expected `A`, got `B<TestImpl>`
   |
note: previous use here
  --> $DIR/recursive-tait-conflicting-defn.rs:20:18
   |
LL | pub fn test() -> TestImpl {
   |                  ^^^^^^^^

error: aborting due to 1 previous error

